--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "node_modules/.bin/gh-pages -d dist"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1"
