--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "node_modules/.bin/eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "node_modules/.bin/vite preview",
     "predeploy": "npm run build",
-    "deploy": "node_modules/.bin/gh-pages -d dist"
+    "deploy": "npm run build && scp -r ./dist/* pavelzobov123@whatowearexpress.twilightparadox.com:/home/pavelzobov123/frontend"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -29,5 +30,5 @@
     "globals": "^15.15.0",
     "vite": "^6.2.0"
   },
-  "homepage": "https://Pavkv.github.io/se_project_react/"
+  "homepage": "https://whatowearexpress.twilightparadox.com"
 }
