--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://whatowearexpress.twilightparadox.com",
   "scripts": {
+    "format": "prettier --write .",
     "dev": "node_modules/.bin/vite --open",
     "build": "node_modules/.bin/vite build",
     "lint": "node_modules/.bin/eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -29,6 +31,5 @@
     "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "vite": "^6.2.0"
-  },
-  "homepage": "https://whatowearexpress.twilightparadox.com"
+  }
 }
